apps/platform/jobops/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jobops
spec:
  selector:
    app.kubernetes.io/name: jobops
  ports:
    - name: http
      port: 3001
      targetPort: http
